# proton-bridge-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  SECURITY.md  bootstrap.py  claude_desktop_config.example.json  conftest.py  install.sh  proton_bridge_mcp.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  server.json  setup_keychain.sh
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/: test_helpers.py
