# PEP 621 metadata for proton-bridge-mcp.
#
# This file is what the PyPI distribution and the official MCP Registry
# entry are built from. Runtime dependency *resolution* still uses the
# hash-pinned `requirements.txt` (and `requirements-dev.txt` for
# development); the version specifiers below are deliberately broad lower
# bounds rather than pins so that downstream installs via `pip install
# proton-bridge-mcp` or `uvx proton-bridge-mcp` get a working set without
# being locked to the exact transitive graph the developer pinned.
#
# Single-module layout: the source lives in `proton_bridge_mcp.py` at the
# repo root, not in a package directory. `[tool.setuptools] py-modules`
# captures that explicitly.

[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proton-bridge-mcp"
dynamic = ["version"]
description = "Hardened local MCP server exposing Proton Mail Bridge to Claude over loopback IMAP/SMTP. macOS Keychain credentials, TLS pinning, hash-pinned dependencies, prompt-injection hardening on the read path."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mike Harris", email = "mike@tigerblue.io" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "claude",
    "claude-code",
    "proton",
    "proton-mail",
    "email",
    "imap",
    "smtp",
    "macos",
    "keychain",
    "tls-pinning",
    "prompt-injection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli] >= 1.0",
    "pydantic >= 2.0",
]

[project.urls]
Homepage = "https://github.com/miketigerblue/proton-bridge-mcp"
Repository = "https://github.com/miketigerblue/proton-bridge-mcp.git"
Issues = "https://github.com/miketigerblue/proton-bridge-mcp/issues"
Changelog = "https://github.com/miketigerblue/proton-bridge-mcp/blob/main/CHANGELOG.md"
"Security advisories" = "https://github.com/miketigerblue/proton-bridge-mcp/security/advisories"

[project.scripts]
# Console-script entry point: after `pip install proton-bridge-mcp` (or
# `uvx proton-bridge-mcp`), the binary is callable as `proton-bridge-mcp`.
# It dispatches `--version`, `--find-cert`, `--learn-cert`, and otherwise
# starts the MCP server over stdio.
proton-bridge-mcp = "proton_bridge_mcp:main"

[tool.setuptools]
py-modules = ["proton_bridge_mcp"]

[tool.setuptools.dynamic]
# Single source of truth for the version: the module-level
# `__version__` literal in `proton_bridge_mcp.py`. Bump that when cutting
# a release; setuptools propagates the value to the wheel metadata, the
# `--version` flag (which already reads the same attribute), and -- via
# the registry submission -- to `server.json` (which is updated manually
# in the same commit).
version = { attr = "proton_bridge_mcp.__version__" }

[tool.bandit]
# Project-level configuration for the bandit SAST CI job. The skips below
# are categories that fire only on idioms we use deliberately and would
# otherwise drown the signal-to-noise ratio in known-acceptable findings.
# Each skip is *justified*; future contributors should reconsider any
# entry rather than treating the list as load-bearing.
#
# Tests are excluded from the scan: the unit tests use assert (B101) and
# hardcoded test data heavily, both of which are non-issues there.
exclude_dirs = ["tests", ".venv", "__pycache__"]
skips = [
    # B101: assert_used.
    #   We never run with -O (PYTHONOPTIMIZE), so asserts are not
    #   stripped. The handful of asserts in this codebase are type guards
    #   and invariants ("self.client is not None after pool reconnect"),
    #   not security checks.
    "B101",
    # B110: try_except_pass.
    #   Used exclusively in best-effort cleanup paths (IMAP logout that
    #   may already be torn down, chmod that may not be supported on the
    #   filesystem). Swallowing the exception is the correct behaviour;
    #   the cleanup is an attempt, not a guarantee.
    "B110",
    # B404: blacklist (subprocess import).
    #   subprocess is imported deliberately for macOS Keychain access
    #   via `/usr/bin/security`, which is an explicit design choice
    #   (see _keychain_password and SECURITY.md). The import itself is
    #   not an issue; specific calls are individually safe (see B603).
    "B404",
    # B603: subprocess_without_shell_equals_true.
    #   Every subprocess.run() call in this codebase uses a hardcoded
    #   absolute binary path (`/usr/bin/security`, the venv's pip), with
    #   user-influenced data (BRIDGE_USER) passed as a separate argv
    #   element via `-a`, not interpolated into a shell string. shell=True
    #   is never used. There is no execve-of-untrusted-input concern.
    "B603",
    # B606: start_process_with_no_shell.
    #   Fires on bootstrap.py's `os.execv` for the Python<3.10 re-exec.
    #   The target is selected from a hardcoded candidate list of
    #   well-known Homebrew/system paths plus `shutil.which("python3.1X")`
    #   results -- never user input.
    "B606",
    # B613: trojansource.
    #   Fires on the `_INVISIBLE_CHARS` regex literal, which by design
    #   contains the bidi-override and zero-width Unicode that it
    #   exists to strip from inbound email content. This is the
    #   trojan-source mitigation, not a trojan-source vulnerability.
    #   See _strip_invisibles in proton_bridge_mcp.py and
    #   TestStripInvisibles in tests/test_helpers.py.
    "B613",
]
